--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todolist-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/KrystianLewalski/todolist-react.git",
+  "homepage": "https://krystianlewalski.github.io/todolist-react/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
